@@ -482,6 +482,7 @@ public:
 	int32 GetDotFocus(uint16 spell_id, int32 value);
 	int32 GetActDoTDamage(uint16 spell_id, int32 value);
 	virtual bool CheckFizzle(uint16 spell_id);
+	virtual bool CheckSpellLevelRestriction(uint16 spell_id);
 	virtual int GetCurrentBuffSlots() const;
 	virtual int GetCurrentSongSlots() const;
 	virtual int GetCurrentDiscSlots() const { return 1; }
